# hearthstone-cardsearch

./: .gitignore  card-data-pretty.json  card-data.json  card-image.json  cards.json  hearthstone-cardsearch.cabal
app/: Gen.hs  Main.hs
client/: build.sh  card-data.js  card-image.js  client.cabal  client.js  index-plain.html  index.html  post-processing.sh  stack.yaml
client/app/: Main.hs
client/src/: Card.hs  Filter.hs  Summary.hs  Widget.hs
src/: Card.hs  Generator.hs  Parser.hs
