name:                hearthstone-cardsearch
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/Frefreak/hearthstone-cardsearch#readme
license:             BSD3
license-file:        LICENSE
author:              Xiangyu Zhu
maintainer:          frefreak.zxy@gmail.com
copyright:           Copyright Xiangyu Zhu (c) 2016
category:            Abstract
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Card
  build-depends:       base >= 4.7 && < 5
                     , text
                     , lens
                     , containers
  default-language:    Haskell2010

executable cardsearch
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hearthstone-cardsearch
  default-language:    Haskell2010

test-suite cardsearch-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hearthstone-cardsearch
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Frefreak/hearthstone-cardsearch
